# earth-climate-data

./: .gitignore  .pre-commit-config.yaml  README.md  cron_update_data.py  example.py  example_handler.py  generate_tests.py  main.py  pyproject.toml  requirements.txt  run_pre_commit.bat  test.js  update_docs.py
.github/workflows/: python-package.yml
app/: __init__.py
app/api/: __init__.py
app/api/nasa/: __init__.py  handler.py  session.py  sync.py
app/api/noaa/: __init__.py  handler.py  session.py  (+1 more)
app/constants/: __init__.py  blueprints_names.py  routes.py
app/helpers/: __init__.py  csv_converter.py  custom_json_provider.py  date_parsers.py  decompress_gz.py  extract_file_from_zip.py  extract_json.py  http_request.py  nc_converter.py  po_daac_parser.py
app/nasa/: __init__.py  handler.py  session.py
app/noaa/: __init___.py  handler.py  noaa_ice_data_parser.py  session.py
app/services/: __init__.py  db_service.py  http_request.py
tests/: test___init___.py  test_all_handlers.py  test_all_parsers.py  test_all_sessions.py  test_blueprints_names.py  test_calculate_index.py  test_csv_converter.py  test_custom_json_provider.py  test_date_parsers.py  test_dustnat_noaa_parser.py  test_extract_file_from_zip.py  test_fresh_link_generator.py  test_gisstemp_parser.py  test_gistemp_parser.py  test_gmsl_indicator_parser.py  test_http_request.py  test_methane_parser.py  test_n2o_iso_parser.py  test_nc_nasa_parser.py  test_noaa_ice_data_parser.py  test_noaa_paleo_parser.py  test_ocean_pentad_heat_data.py  test_ozone_data_parser.py  test_ratpac_text_parser.py  test_relative_sea_level_parser.py  test_relative_sea_level_summary_parser.py  test_routes.py  test_vostok_ch4nat_parser.py  test_vostok_co2_nat_parser.py  test_vostok_temp_parser.py
(+54 files in other folders)
